[metadata]
name = pyrcv
version = 1.2.0
author = Chris Roat
author_email = chris.roat@gmail.com
description = Python API for adjudicating single transferable vote elections.  Also contains basic web server to adjudicate results in CSV format.
license = GNU General Public License v3
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/chrisroat/pyrcv
project_urls =
	Bug Tracker = https://github.com/chrisroat/pyrcv/issues
	Production Server = https://www.pyrcv.org
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Other Audience
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Natural Language :: English
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.11
install_requires =
	click>=8
	icontract>=2.6
	numpy>=1.21
	pandas>=1.5
	plotly>=5.13
tests_require =
	pytest>=3

[options.packages.find]
include =
	pyrcv
	pyrcv.*

[options.entry_points]
console_scripts =
	pyrcv = pyrcv.cli:main

[bdist_wheel]
universal = 1

[flake8]
# References:
# https://flake8.readthedocs.io/en/latest/user/configuration.html
# https://flake8.readthedocs.io/en/latest/user/error-codes.html
# https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
extend-ignore =
	# Extra space in brackets
    E20,
	# Assigning lambda expression
    E731,
	# line break before binary operator
    W503,
max-line-length = 88
exclude = docs,venv,.venv

[isort]
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
